fix pendaftaran
