# storage/api-docs/api-docs.json
@@ -15,164 +15,6 @@
         }
     ],
     "paths": {
-        "/api/pendaftaran": {
-            "get": {
-                "tags": [
-                    "Pendaftaran"
-                ],
-                "summary": "Ambil semua data pendaftaran",
-                "operationId": "fc2d9c894e85b3e7ac8663bb3f8acd30",
-                "responses": {
-                    "200": {
-                        "description": "Sukses"
-                    }
-                }
-            },
-            "post": {
-                "tags": [
-                    "Pendaftaran"
-                ],
-                "summary": "Tambah pendaftaran baru",
-                "operationId": "2e8c3aec889b6e28d4d6838e3b4b4cf4",
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "required": [
-                                    "pasien_id",
-                                    "poli_id",
-                                    "status_bpjs"
-                                ],
-                                "properties": {
-                                    "pasien_id": {
-                                        "type": "integer"
-                                    },
-                                    "poli_id": {
-                                        "type": "integer"
-                                    },
-                                    "status_bpjs": {
-                                        "type": "string",
-                                        "enum": [
-                                            "Ya",
-                                            "Tidak"
-                                        ]
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "201": {
-                        "description": "Berhasil ditambahkan"
-                    }
-                }
-            }
-        },
-        "/api/pendaftaran/{id}": {
-            "get": {
-                "tags": [
-                    "Pendaftaran"
-                ],
-                "summary": "Ambil detail pendaftaran",
-                "operationId": "b22b15405718686168ca583323db80f7",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Data ditemukan"
-                    },
-                    "404": {
-                        "description": "Tidak ditemukan"
-                    }
-                }
-            },
-            "put": {
-                "tags": [
-                    "Pendaftaran"
-                ],
-                "summary": "Update pendaftaran",
-                "operationId": "b5ea917ddea63b53e17880efd7cd0f7c",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "properties": {
-                                    "pasien_id": {
-                                        "type": "integer"
-                                    },
-                                    "poli_id": {
-                                        "type": "integer"
-                                    },
-                                    "status_bpjs": {
-                                        "type": "string",
-                                        "enum": [
-                                            "Ya",
-                                            "Tidak"
-                                        ]
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Update sukses"
-                    },
-                    "404": {
-                        "description": "Tidak ditemukan"
-                    }
-                }
-            },
-            "delete": {
-                "tags": [
-                    "Pendaftaran"
-                ],
-                "summary": "Hapus pendaftaran",
-                "operationId": "e57a669481e9c4989a3075bf5be7b416",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Berhasil dihapus"
-                    },
-                    "404": {
-                        "description": "Tidak ditemukan"
-                    }
-                }
-            }
-        },
         "/api/dokter": {
             "get": {
                 "tags": [
@@ -1297,6 +1139,179 @@
                 }
             }
         },
+        "/api/pendaftaran": {
+            "get": {
+                "tags": [
+                    "Pendaftaran"
+                ],
+                "summary": "Menampilkan semua data pendaftaran",
+                "operationId": "getPendaftaran",
+                "responses": {
+                    "200": {
+                        "description": "Berhasil mendapatkan data pendaftaran"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Pendaftaran"
+                ],
+                "summary": "Menyimpan data pendaftaran baru",
+                "operationId": "storePendaftaran",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "pasien_id",
+                                    "poli_id",
+                                    "status_bpjs",
+                                    "waktu_daftar"
+                                ],
+                                "properties": {
+                                    "pasien_id": {
+                                        "type": "integer"
+                                    },
+                                    "poli_id": {
+                                        "type": "integer"
+                                    },
+                                    "status_bpjs": {
+                                        "type": "string",
+                                        "enum": [
+                                            "Ya",
+                                            "Tidak"
+                                        ]
+                                    },
+                                    "waktu_daftar": {
+                                        "type": "string",
+                                        "format": "date-time"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Data pendaftaran berhasil disimpan"
+                    }
+                }
+            }
+        },
+        "/api/pendaftaran/{id}": {
+            "get": {
+                "tags": [
+                    "Pendaftaran"
+                ],
+                "summary": "Menampilkan detail pendaftaran berdasarkan ID",
+                "operationId": "getDetailPendaftaran",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Detail pendaftaran ditemukan"
+                    },
+                    "404": {
+                        "description": "Pendaftaran tidak ditemukan"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Pendaftaran"
+                ],
+                "summary": "Memperbarui data pendaftaran",
+                "operationId": "updatePendaftaran",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "pasien_id",
+                                    "poli_id",
+                                    "status_bpjs",
+                                    "waktu_daftar"
+                                ],
+                                "properties": {
+                                    "pasien_id": {
+                                        "type": "integer"
+                                    },
+                                    "poli_id": {
+                                        "type": "integer"
+                                    },
+                                    "status_bpjs": {
+                                        "type": "string",
+                                        "enum": [
+                                            "Ya",
+                                            "Tidak"
+                                        ]
+                                    },
+                                    "waktu_daftar": {
+                                        "type": "string",
+                                        "format": "date-time"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Data pendaftaran berhasil diperbarui"
+                    },
+                    "404": {
+                        "description": "Pendaftaran tidak ditemukan"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Pendaftaran"
+                ],
+                "summary": "Menghapus data pendaftaran",
+                "operationId": "deletePendaftaran",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Pendaftaran berhasil dihapus"
+                    },
+                    "404": {
+                        "description": "Pendaftaran tidak ditemukan"
+                    }
+                }
+            }
+        },
         "/api/pengambilan-obat": {
             "get": {
                 "tags": [
@@ -1931,9 +1946,6 @@
     },
     "tags": [
         {
-            "name": "Pendaftaran"
-        },
-        {
             "name": "Dokter",
             "description": "Manajemen data dokter"
         },
@@ -1956,6 +1968,10 @@
         {
             "name": "Payments",
             "description": "Manajemen data pembayaran"
+        },
+        {
+            "name": "Pendaftaran",
+            "description": "Manajemen data pendaftaran pasien"
         },
         {
             "name": "Pengambilan Obat",
